<resources>
    <string name="app_name">My Application</string>
    <string name="my_view">My view</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name">Name</string>
    <string name="phone_number">Phone</string>
    <string name="save_option">Save</string>
    <string name="cancel_option">Cancel</string>
    <string name="add_image">Add Image</string>
    <string name="update_btn">Update Contact</string>
    <string name="fragment">Fragment\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showing_contacts_using_fragment">Showing Contacts using Fragment</string>
</resources>