<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaveContactsActivity">

    <ImageView
        android:id="@+id/insert_image_view"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <Button
        android:id="@+id/insert_img"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add Image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:background="@null"
            android:src="@drawable/contacts_icon">
        </ImageButton>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:hint="@string/contact_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/phone_icon">
        </ImageButton>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:hint="@string/phone_number"
            android:maxLength="10"
            android:inputType="phone" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@color/purple_700"
            android:text="@string/cancel_option" />

        <Button
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:background="@color/purple_700"
            android:text="@string/save_option"
            android:textAlignment="center" />
    </RelativeLayout>
</LinearLayout>